@@ -1,9 +1,10 @@
 package by.dragonsurvivalteam.dragonsurvival.config;
 
 import by.dragonsurvivalteam.dragonsurvival.DragonSurvivalMod;
+import by.dragonsurvivalteam.dragonsurvival.common.handlers.DragonConfigHandler;
+import by.dragonsurvivalteam.dragonsurvival.common.handlers.DragonFoodHandler;
 import by.dragonsurvivalteam.dragonsurvival.config.obj.*;
 import com.electronwill.nightconfig.core.EnumGetMethod;
-import com.google.common.primitives.Primitives;
 import net.minecraft.core.Holder;
 import net.minecraft.core.Registry;
 import net.minecraft.core.registries.BuiltInRegistries;
@@ -13,7 +14,6 @@ import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.alchemy.Potion;
-import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.entity.BlockEntityType;
@@ -26,34 +26,47 @@ import net.neoforged.fml.common.EventBusSubscriber;
 import net.neoforged.fml.config.ModConfig;
 import net.neoforged.fml.event.config.ModConfigEvent;
 import net.neoforged.fml.loading.FMLEnvironment;
+import net.neoforged.fml.loading.FMLLoader;
 import net.neoforged.fml.loading.modscan.ModAnnotation;
 import net.neoforged.neoforge.common.ModConfigSpec;
 import net.neoforged.neoforgespi.language.ModFileScanData;
 import org.apache.commons.lang3.tuple.Pair;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.objectweb.asm.Type;
 
 import java.lang.annotation.ElementType;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
+import java.lang.reflect.ParameterizedType;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+/**
+ * Parses the annotated classes to handle the config values <br>
+ * Normally it's a one way setting from the {@link ModConfigSpec.ConfigValue} fields to the class fields <br>
+ * (The exception being {@link ConfigHandler#updateConfigValue(String, Object)})
+ */
 @EventBusSubscriber(modid = DragonSurvivalMod.MODID, bus = EventBusSubscriber.Bus.MOD)
 public class ConfigHandler {
-
     public static ClientConfig CLIENT;
     public static ModConfigSpec clientSpec;
     public static ServerConfig SERVER;
     public static ModConfigSpec serverSpec;
 
-    public static HashMap<String, Object> defaultConfigValues = new HashMap<>(); // Contains the default values
-    public static HashMap<String, ConfigType> configTypes = new HashMap<>(); // Contains the config types
-    public static HashMap<String, ConfigOption> configObjects = new HashMap<>(); // Contains config options
-    public static HashMap<String, Field> configFields = new HashMap<>(); // Contains all annotated config fields
-    public static HashMap<ConfigSide, List<String>> configs = new HashMap<>(); // Contains all config keys per side
-    public static HashMap<String, ModConfigSpec.ConfigValue<?>> configValues = new HashMap<>(); // contains all config values
+    /** Contains the default values (specified in-code) <br> The key is {@link ConfigOption#key()} */
+    public static final HashMap<String, Object> DEFAULT_CONFIG_VALUES = new HashMap<>();
+    /** Contains the {@link ConfigType} variants <br> The key is {@link ConfigOption#key()} */
+    public static final HashMap<String, ConfigType> CONFIG_TYPES = new HashMap<>();
+    /** Contains all {@link ConfigOption} entries <br> The key is {@link ConfigOption#key()} */
+    public static final HashMap<String, ConfigOption> CONFIG_OBJECTS = new HashMap<>();
+    /** Contains all fields which have an {@link ConfigOption} annotation <br> The key is {@link ConfigOption#key()} */
+    public static final HashMap<String, Field> CONFIG_FIELDS = new HashMap<>();
+    /** Contains all config keys per side (i.e. client or server) */
+    public static final HashMap<ConfigSide, Set<String>> CONFIG_KEYS = new HashMap<>();
+    /** Contains all config values */
+    public static final HashMap<String, ModConfigSpec.ConfigValue<?>> CONFIG_VALUES = new HashMap<>();
 
     private static final HashMap<Class<?>, Registry<?>> REGISTRY_MAP = new HashMap<>();
 
@@ -95,9 +108,10 @@ public class ConfigHandler {
     public static void initConfig() {
         initTypes();
 
-        List<Field> fields = getFields();
+        List<String> duplicateKeys = new ArrayList<>();
 
-        fields.forEach(field -> {
+        getFields().forEach(field -> {
+            // There are no per-instance configs
             if (!Modifier.isStatic(field.getModifiers())) {
                 return;
             }
@@ -105,24 +119,35 @@ public class ConfigHandler {
             ConfigOption configOption = field.getAnnotation(ConfigOption.class);
 
             try {
-                defaultConfigValues.put(configOption.key(), field.get(null));
+                // null because it's a static access (i.e. no instance)
+                DEFAULT_CONFIG_VALUES.put(configOption.key(), field.get(null));
             } catch (IllegalAccessException e) {
                 DragonSurvivalMod.LOGGER.error("There was a problem while trying to get the default config value of [{}]", ConfigHandler.createConfigPath(configOption), e);
             }
 
-            configFields.put(configOption.key(), field);
-            configObjects.put(configOption.key(), configOption);
+            CONFIG_FIELDS.put(configOption.key(), field);
+            CONFIG_OBJECTS.put(configOption.key(), configOption);
 
             ConfigType configType = field.getAnnotation(ConfigType.class);
+
             if (configType != null) {
-                configTypes.put(configOption.key(), configType);
+                CONFIG_TYPES.put(configOption.key(), configType);
             }
 
-            configs.computeIfAbsent(configOption.side(), key -> new ArrayList<>()).add(configOption.key());
+            boolean keyAdded = CONFIG_KEYS.computeIfAbsent(configOption.side(), key -> new HashSet<>()).add(configOption.key());
+
+            if (!keyAdded) {
+                duplicateKeys.add(configOption.key());
+            }
         });
 
+        if (!duplicateKeys.isEmpty()) {
+            throw new IllegalStateException("Tried to add duplicate config keys: " + duplicateKeys);
+        }
+
         ModContainer modContainer = ModLoadingContext.get().getActiveContainer();
-        if (FMLEnvironment.dist.isClient()) {
+
+        if (FMLLoader.getDist().isClient()) {
             Pair<ClientConfig, ModConfigSpec> clientConfig = new ModConfigSpec.Builder().configure(ClientConfig::new);
             CLIENT = clientConfig.getLeft();
             clientSpec = clientConfig.getRight();
@@ -137,13 +162,13 @@ public class ConfigHandler {
         modContainer.registerConfig(ModConfig.Type.SERVER, serverSpec);
     }
 
-    public static void addConfigs(final ModConfigSpec.Builder builder, final ConfigSide side) {
-        for (String key : configs.getOrDefault(side, Collections.emptyList())) {
-            ConfigOption configOption = configObjects.get(key);
-            Field field = configFields.get(key);
-            Object defaultValues = defaultConfigValues.get(configOption.key());
+    public static void createConfigEntries(final ModConfigSpec.Builder builder, final ConfigSide side) {
+        for (String key : CONFIG_KEYS.getOrDefault(side, Set.of())) {
+            ConfigOption configOption = CONFIG_OBJECTS.get(key);
+            Field field = CONFIG_FIELDS.get(key);
+            Object defaultValues = DEFAULT_CONFIG_VALUES.get(configOption.key());
 
-            // Get the category - if none is present put it in the `general` category
+            // Get the category - if none is present put it in the 'general' category
             String[] categories = configOption.category() != null && configOption.category().length > 0 ? configOption.category() : new String[]{"general"};
             String[] comment = configOption.comment() != null ? configOption.comment() : new String[0];
 
@@ -158,38 +183,80 @@ public class ConfigHandler {
             }
 
             try {
-                Object tt = Primitives.isWrapperType(defaultValues.getClass()) ? Primitives.wrap(defaultValues.getClass()).cast(defaultValues) : defaultValues;
-
                 ConfigRange range = field.isAnnotationPresent(ConfigRange.class) ? field.getAnnotation(ConfigRange.class) : null;
-                boolean rang = range != null;
+                boolean hasRange = range != null;
 
                 // Fill the configuration options (define the key, default value and predicate to check if the option is valid)
-                if (tt instanceof Integer intVal) {
-                    ModConfigSpec.IntValue value = builder.defineInRange(configOption.key(), intVal, rang ? (int) range.min() : Integer.MIN_VALUE, rang ? (int) range.max() : Integer.MAX_VALUE);
-                    configValues.put(key, value);
-                } else if (tt instanceof Float floatVal) {
-                    ModConfigSpec.DoubleValue value = builder.defineInRange(configOption.key(), floatVal, rang ? range.min() : Float.MIN_VALUE, rang ? range.max() : Float.MAX_VALUE);
-                    configValues.put(key, value);
-                } else if (tt instanceof Long longVal) {
-                    ModConfigSpec.LongValue value = builder.defineInRange(configOption.key(), longVal, rang ? (long) range.min() : Long.MIN_VALUE, rang ? (long) range.max() : Long.MAX_VALUE);
-                    configValues.put(key, value);
-                } else if (tt instanceof Double doubleVal) {
-                    ModConfigSpec.DoubleValue value = builder.defineInRange(configOption.key(), doubleVal, rang ? range.min() : Double.MIN_VALUE, rang ? range.max() : Double.MAX_VALUE);
-                    configValues.put(key, value);
-                } else if (tt instanceof Boolean boolValue) {
+                if (defaultValues instanceof Integer intVal) {
+                    ModConfigSpec.IntValue value = builder.defineInRange(configOption.key(), intVal, hasRange ? (int) range.min() : Integer.MIN_VALUE, hasRange ? (int) range.max() : Integer.MAX_VALUE);
+                    CONFIG_VALUES.put(key, value);
+                } else if (defaultValues instanceof Float floatVal) {
+                    ModConfigSpec.DoubleValue value = builder.defineInRange(configOption.key(), floatVal, hasRange ? range.min() : Float.MIN_VALUE, hasRange ? range.max() : Float.MAX_VALUE);
+                    CONFIG_VALUES.put(key, value);
+                } else if (defaultValues instanceof Long longVal) {
+                    ModConfigSpec.LongValue value = builder.defineInRange(configOption.key(), longVal, hasRange ? (long) range.min() : Long.MIN_VALUE, hasRange ? (long) range.max() : Long.MAX_VALUE);
+                    CONFIG_VALUES.put(key, value);
+                } else if (defaultValues instanceof Double doubleVal) {
+                    ModConfigSpec.DoubleValue value = builder.defineInRange(configOption.key(), doubleVal, hasRange ? range.min() : Double.MIN_VALUE, hasRange ? range.max() : Double.MAX_VALUE);
+                    CONFIG_VALUES.put(key, value);
+                } else if (defaultValues instanceof Boolean boolValue) {
                     ModConfigSpec.BooleanValue value = builder.define(configOption.key(), (boolean) boolValue);
-                    configValues.put(key, value);
+                    CONFIG_VALUES.put(key, value);
                 } else if (field.getType().isEnum()) {
+                    //noinspection unchecked,rawtypes -> ignored
                     ModConfigSpec.EnumValue<?> value = builder.defineEnum(configOption.key(), (Enum) defaultValues, ((Enum<?>) defaultValues).getClass().getEnumConstants());
-                    configValues.put(key, value);
-                } else if (tt instanceof List<?> list) { // TODO :: Numeric lists?
+                    CONFIG_VALUES.put(key, value);
+                } else if (defaultValues instanceof List<?> list) {
                     // By default, lists are not allowed to be empty, so we define the range manually here.
                     ModConfigSpec.Range<Integer> sizeRange = ModConfigSpec.Range.of(0, Integer.MAX_VALUE);
-                    ModConfigSpec.ConfigValue<List<?>> value = builder.defineList(List.of(configOption.key()), () -> list, () -> getDefaultListValueForConfig(configOption.key()), configValue -> field.isAnnotationPresent(IgnoreConfigCheck.class) || checkConfig(configOption, configValue), sizeRange);
-                    configValues.put(key, value);
+                    ModConfigSpec.ConfigValue<List<?>> configList = null;
+
+                    boolean handledList = false;
+
+                    // Convert custom config list to a string-based list for the 'ModConfig$ConfigValue' field
+                    if (field.getGenericType() instanceof ParameterizedType listParameter) { // Get the type parameter from List<CustomConfig>
+                        String className = listParameter.getActualTypeArguments()[0].getTypeName();
+
+                        try {
+                            Class<?> customConfigType = Class.forName(className);
+
+                            if (CustomConfig.class.isAssignableFrom(customConfigType)) {
+                                //noinspection unchecked -> ignore, type is safe
+                                List<CustomConfig> customList = (List<CustomConfig>) list;
+
+                                configList = builder.defineList(
+                                        List.of(configOption.key()),
+                                        () -> customList.stream().map(CustomConfig::convert).toList(),
+                                        () -> getDefaultListValueForConfig(configOption.key()),
+                                        configValue -> field.isAnnotationPresent(IgnoreConfigCheck.class) || CustomConfig.validate(customConfigType, configValue),
+                                        sizeRange
+                                );
+
+                                handledList = true;
+                            }
+                        } catch (ClassNotFoundException exception) {
+                            DragonSurvivalMod.LOGGER.error("A problem occurred while trying to handle the config [{}]", configOption.key(), exception);
+                        }
+                    }
+
+                    if (!handledList) {
+                        configList = builder.defineList(
+                                List.of(configOption.key()),
+                                () -> list,
+                                () -> getDefaultListValueForConfig(configOption.key()),
+                                configValue -> field.isAnnotationPresent(IgnoreConfigCheck.class) || checkConfig(configOption, configValue),
+                                sizeRange
+                        );
+                    }
+
+                    CONFIG_VALUES.put(key, configList);
+                } else if (defaultValues instanceof CustomConfig customConfig) {
+                    ModConfigSpec.ConfigValue<String> value = builder.define(configOption.key(), customConfig.convert());
+                    CONFIG_VALUES.put(key, value);
                 } else {
+                    // This will likely run into a 'com.electronwill.nightconfig.core.io.WritingException: Unsupported value type' exception
                     ModConfigSpec.ConfigValue<Object> value = builder.define(configOption.key(), defaultValues);
-                    configValues.put(key, value);
+                    CONFIG_VALUES.put(key, value);
                     DragonSurvivalMod.LOGGER.warn("Potential issue found for configuration: [{}]", configOption.key());
                 }
             } catch (Exception e) {
@@ -230,10 +297,9 @@ public class ConfigHandler {
     /**
      * More specific checks depending on the config type
      */
-    public static boolean checkSpecific(final String key, final Object configValue) {
-        // TODO :: Maybe specifiy the full path?
+    public static boolean checkSpecific(final String configKey, final Object configValue) {
         // Food options
-        switch (key) {
+        switch (configKey) {
             case "caveDragonFoods", "forestDragonFoods", "seaDragonFoods" -> {
                 if (configValue instanceof String string) {
                     // namespace:item_id:hunger:saturation
@@ -261,7 +327,6 @@ public class ConfigHandler {
                 return false;
             }
 
-
             // Blacklisted Slots
             case "blacklistedSlots" -> {
                 try {
@@ -272,7 +337,6 @@ public class ConfigHandler {
 
                 return true;
             }
-
 
             // Dirt transformations (forest dragon breath)
             case "dirtTransformationBlocks" -> {
@@ -291,7 +355,6 @@ public class ConfigHandler {
         String string = String.valueOf(configValue);
 
         if (string.split(":").length == 2) {
-            // Simply checking for this at the start is unsafe since `awtaj` is a valid resource location but can cause problems if it's just some gibberish
             return ResourceLocation.tryParse(string) != null;
         }
 
@@ -308,52 +371,42 @@ public class ConfigHandler {
     }
 
     /**
-     * Get the relevant string value from an object for specific types
-     */
-    private static Object getRelevantString(final Object object) {
-        // TODO :: Might not be used / relevant at the moment?
-        if (object instanceof Registry<?> registry) {
-            return registry.toString();
-        }
-
-        if (object instanceof Enum<?> enumValue) {
-            return enumValue.name();
-        }
-
-        return object;
-    }
-
-    /**
+     * If {@link ConfigType} is used then said config entries will go through here <br>
+     * This also means it cannot be used if the config entries contain additional information (e.g. like the food configs)
      * @param registry Registry to check data for
      * @param location Value to parse
      * @param <T>      Types which can be used in a registry (e.g. Item or Block)
      * @return Either a list of the resolved tag or the resource element
      */
-    public static <T> List<T> parseResourceLocation(final Registry<T> registry, final String location) {
+    public static <T> List<T> parseResourceLocation(@NotNull final Registry<T> registry, final String location) {
+        // There are configuration which have additional information after the resource location (e.g. food configuration)
         ResourceLocation resourceLocation = ResourceLocation.tryParse(location);
 
         if (resourceLocation == null) {
-            // Try parsing regex if it's not a valid resource location
-            String[] split = location.split(":");
+            // Only split the namespace from the (potential) regex path
+            String[] splitLocation = location.split(":", 1);
 
-            // Just to be sure
-            if (split.length != 2) {
-                DragonSurvivalMod.LOGGER.warn("Regex definition for the blacklist has the wrong format: {}", location);
-                return Collections.emptyList();
+            if (splitLocation.length < 2) {
+                return List.of();
             }
 
+            // Try parsing regex if it's not a valid resource location
             List<T> list = new ArrayList<>();
+
             registry.registryKeySet().forEach((key) -> {
                 ResourceLocation keyLocation = key.location();
-                if (keyLocation.getNamespace().equals(split[0])) {
-                    Pattern pattern = Pattern.compile(split[1]);
+
+                if (keyLocation.getNamespace().equals(splitLocation[0])) {
+                    Pattern pattern = Pattern.compile(splitLocation[1]);
 
                     Matcher matcher = pattern.matcher(keyLocation.getPath());
+
                     if (matcher.matches()) {
                         list.add(registry.get(key));
                     }
                 }
             });
+
             return list;
         }
 
@@ -368,8 +421,8 @@ public class ConfigHandler {
 
             if (tag.isPresent()) {
                 List<T> list = new ArrayList<>();
-                registry.holders().forEach(
-                        holder -> holder.tags().forEach(
+
+                registry.holders().forEach(holder -> holder.tags().forEach(
                                 holderTag -> {
                                     if (tag.get().equals(holderTag)) {
                                         list.add(holder.value());
@@ -377,43 +430,57 @@ public class ConfigHandler {
                                 }
                         )
                 );
+
                 return list;
             }
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
-     * If the value is a {@link String} it can return the following:
-     * <ul>
-     *     <li>Enum value if the field is an enum</li>
-     *     <li>Resource entries from {@link ConfigHandler#parseResourceLocation(Registry, String)}</li>
-     *     <li>Otherwise just the original string value</li>
-     * </ul>
-     * <p>
-     * Otherwise, it will check if the value is a {@link Number} and return the correct value for that<br>
-     * If it's also not a number the original value will be returned
+     * @param field The class field which dictates the type to set
+     * @param value The value (from {@link net.neoforged.neoforge.common.ModConfigSpec.ConfigValue}) which will be converted to the class field type
+     * @param registryType (Optional) The type of registry object (e.g. {@link Block})
+     * @return The converted value for the field
      */
-    private static Object getRelevantValue(final Field field, final Object object, final Class<?> clazz) {
-        if (object instanceof String stringValue) {
+    @SuppressWarnings({"unchecked", "rawtypes"}) // should be fine
+    private static @Nullable Object convertToFieldValue(final Field field, final Object value, @Nullable final Class<?> registryType) {
+        if (field.getGenericType() instanceof ParameterizedType listParameter) {
+            try {
+                Class<?> classType = Class.forName(listParameter.getActualTypeArguments()[0].getTypeName());
+
+                // Check for string since the list itself goes through here as well
+                if (CustomConfig.class.isAssignableFrom(classType) && value instanceof String string) {
+                    return CustomConfig.parse(classType, string);
+                }
+            } catch (ClassNotFoundException exception) {
+                DragonSurvivalMod.LOGGER.error("A problem occurred while trying to parse a custom config entry: {}", value);
+            }
+        }
+
+        if (value instanceof String string) {
             if (field.getType().isEnum()) {
-                Class<? extends Enum> cs = (Class<? extends Enum>) field.getType();
-                return EnumGetMethod.ORDINAL_OR_NAME.get(object, cs);
+                Class<? extends Enum> cs = (Class<? extends Enum<?>>) field.getType();
+                return EnumGetMethod.ORDINAL_OR_NAME.get(value, cs);
             }
 
-            List<?> list = parseResourceLocation(REGISTRY_MAP.get(clazz), stringValue);
+            Registry<?> registry = REGISTRY_MAP.get(registryType);
 
-            if (list != null) {
-                if (field.getGenericType() instanceof List<?>) {
-                    return list.isEmpty() ? List.of(stringValue) : list;
-                } else {
-                    return list.isEmpty() ? null : stringValue;
+            if (registry != null) {
+                List<?> list = parseResourceLocation(registry, string);
+
+                if (list != null) {
+                    if (field.getGenericType() instanceof List<?>) {
+                        return list.isEmpty() ? List.of(string) : list;
+                    } else {
+                        return list.isEmpty() ? null : string;
+                    }
                 }
             }
         }
 
-        if (object instanceof Number number) {
+        if (value instanceof Number number) {
             if (field.getType().equals(double.class) || field.getType().equals(Double.class)) {
                 return number.doubleValue();
             }
@@ -433,119 +500,169 @@ public class ConfigHandler {
             return number;
         }
 
-        return object;
+        return value;
     }
 
     @SubscribeEvent
-    public static void onModConfig(final ModConfigEvent.Loading event) {
-        onModConfig(event.getConfig().getType());
+    public static void handleConfigLoading(final ModConfigEvent.Loading event) {
+        handleConfigChange(event.getConfig().getType());
     }
 
     @SubscribeEvent
-    public static void onModConfig(final ModConfigEvent.Reloading event) {
-        onModConfig(event.getConfig().getType());
+    public static void handleConfigReloading(final ModConfigEvent.Reloading event) {
+        handleConfigChange(event.getConfig().getType());
     }
 
     /**
      * Sets the values of the config fields
      */
-    public static void onModConfig(final ModConfig.Type type) {
+    public static void handleConfigChange(final ModConfig.Type type) {
         ConfigSide side = type == ModConfig.Type.SERVER ? ConfigSide.SERVER : ConfigSide.CLIENT;
-        List<String> configList = configs.get(side);
+        Set<String> configKeys = CONFIG_KEYS.get(side);
 
-        for (String config : configList) {
+        for (String configKey : configKeys) {
             try {
-                if (configValues.containsKey(config) && configFields.containsKey(config)) {
-                    Field field = ConfigHandler.configFields.get(config);
+                if (CONFIG_VALUES.containsKey(configKey) && CONFIG_FIELDS.containsKey(configKey)) {
+                    Field field = ConfigHandler.CONFIG_FIELDS.get(configKey);
 
                     if (field != null) {
-                        Object object = convertFromGeneric(field, config);
+                        Object value = convertToFieldValue(field, configKey);
 
-                        if (object != null) {
-                            field.set(null, object);
+                        if (value != null) {
+                            field.set(null, value);
                         }
                     }
                 }
-            } catch (IllegalAccessException e) {
-                DragonSurvivalMod.LOGGER.error("An error occurred while setting the config [{}]", config, e);
+            } catch (IllegalAccessException | IllegalArgumentException exception) {
+                DragonSurvivalMod.LOGGER.error("An error occurred while setting the config [{}]", configKey, exception);
             }
         }
-    }
 
-    public static void updateConfigValue(final String configKey, final Object configValue) {
-        if (configValues.containsKey(configKey)) {
-            updateConfigValue(configValues.get(configKey), configKey);
+        if (type == ModConfig.Type.SERVER) {
+            DragonFoodHandler.rebuildFoodMap();
+
+            // Technically only relevant if the config spec belongs to us
+            DragonConfigHandler.rebuildBlacklistedItems();
         }
     }
 
     /**
-     * Update and save the config
+     * Update the {@link ModConfigSpec.ConfigValue} and class field with the new value <br>
+     * (Currently only used for the ui when enabling / disabling claws e.g.)
+     * @param configKey The config key of the {@link ConfigOption}
+     * @param newValue Thew value that will be set
      */
-    public static void updateConfigValue(final ModConfigSpec.ConfigValue config, final String configKey) {
-        Object configValue = convertToString(configKey);
-        config.set(convertToString(configValue));
-        config.save();
+    @SuppressWarnings({"rawtypes", "unchecked"})
+    public static void updateConfigValue(final String configKey, final Object newValue) {
+        ModConfigSpec.ConfigValue valueHolder = CONFIG_VALUES.get(configKey);
 
-        ConfigHandler.configValues.entrySet().stream().filter(configList -> configList.getValue() == config).findFirst().ifPresent(configList -> {
-            try {
-                Field field = ConfigHandler.configFields.get(configList.getKey());
+        if (valueHolder == null) {
+            DragonSurvivalMod.LOGGER.error("Could not set the config value for [{}]", configKey);
+            return;
+        }
 
-                if (field != null) {
-                    Object object = convertFromGeneric(field, configKey);
+        // Set the value for the (hidden) config value field
+        valueHolder.set(convertToConfigValue(newValue));
+        valueHolder.save();
 
-                    if (object != null) {
-                        field.set(null, object);
-                    }
-                }
-            } catch (IllegalAccessException e) {
-                DragonSurvivalMod.LOGGER.error("An error occurred while trying to update the config [{}] with the value [{}]", config.getPath(), configValue, e);
+        try {
+            // Set the value for the class field
+            Field field = ConfigHandler.CONFIG_FIELDS.get(configKey);
+
+            if (newValue != null) {
+                field.set(null, newValue);
+            } else {
+                DragonSurvivalMod.LOGGER.error("Tried to update [{}] with a 'null' value", configKey);
             }
-        });
+        } catch (IllegalAccessException | IllegalArgumentException | NullPointerException exception) {
+            DragonSurvivalMod.LOGGER.error("An error occurred while trying to update the config [{}] with the value [{}]", configKey, newValue, exception);
+        }
     }
 
-    @Nullable private static Object convertToString(final Object object) {
+    /**
+     * Get the relevant data that is supposed to be stored in the {@link ModConfigSpec.ConfigValue} field
+     * @return The result of {@link ConfigHandler#getRelevantConfigValue(Object)} (lists will convert their entries using that method)
+     */
+    private static Object convertToConfigValue(final Object object) {
         Object result;
 
         if (object instanceof Collection<?> collection) {
             Collection<Object> list = new ArrayList<>();
 
             for (Object listElement : collection) {
-                list.add(getRelevantString(listElement));
+                list.add(getRelevantConfigValue(listElement));
             }
 
             result = list;
         } else {
-            result = getRelevantString(object);
+            result = getRelevantConfigValue(object);
         }
 
         return result;
     }
 
     /**
-     * See {@link ConfigHandler#getRelevantValue(Field, Object, Class)} for more info
+     * Get the relevant data that is supposed to be stored in the {@link ModConfigSpec.ConfigValue} field <br>
+     * @return Most likely a string or number value
      */
-    private static Object convertFromGeneric(final Field field, String config) throws IllegalAccessException {
-        Object result;
-        Object object = configValues.get(config).get();
-        ConfigType type = configTypes.get(config);
-        Class clazz = null;
-        if (type != null) {
-            clazz = type.value();
+    @SuppressWarnings("deprecation") // ignore
+    private static Object getRelevantConfigValue(final Object object) {
+        if (object instanceof Registry<?> registry) {
+            return registry.key().location();
         }
 
-        if (field.getType().isAssignableFrom(Collection.class)) {
-            ArrayList<Object> list = new ArrayList<>();
+        if (object instanceof CustomConfig customConfig) {
+            return customConfig.convert();
+        }
 
-            for (Object listValue : (Collection<?>) object) {
-                list.add(getRelevantValue(field, listValue, clazz));
+        if (object instanceof Enum<?> enumValue) {
+            return enumValue.name();
+        }
+
+        if (object instanceof Item item) {
+            return item.builtInRegistryHolder().key().location();
+        }
+
+        if (object instanceof Block block) {
+            return block.builtInRegistryHolder().key().location();
+        }
+
+        return object;
+    }
+
+    /**
+     * Retrieves the current config value (from {@link ModConfigSpec.ConfigValue}) <br>
+     * Said value will then be converted to match the class field <br>
+     * See {@link ConfigHandler#convertToFieldValue(Field, Object, Class)} for more information
+     */
+    private static @Nullable Object convertToFieldValue(final Field field, final String configKey) throws IllegalAccessException {
+        Object configValue = CONFIG_VALUES.get(configKey).get();
+        ConfigType configType = CONFIG_TYPES.get(configKey);
+        Class<?> registryType = configType != null ? configType.value() : null;
+
+        Object result;
+
+        if (Collection.class.isAssignableFrom(field.getType())) {
+            Collection<?> collection = (Collection<?>) configValue;
+            ArrayList<Object> resultList = new ArrayList<>();
+
+            for (Object listValue : collection) {
+                Object value = convertToFieldValue(field, listValue, registryType);
+
+                // Could be null if the registry entry is not present (e.g. certain mod is not loaded)
+                if (value != null) {
+                    resultList.add(value);
+                }
             }
 
-            result = list;
+            result = resultList;
+        } else if (CustomConfig.class.isAssignableFrom(field.getType())) {
+            result = CustomConfig.parse(field.getType(), (String) configValue);
         } else {
-            result = object;
+            result = configValue;
         }
 
-        return getRelevantValue(field, result, clazz);
+        return convertToFieldValue(field, result, registryType);
     }
 
     /**
@@ -554,6 +671,7 @@ public class ConfigHandler {
      * @param <T>    Types which can be used in a registry (e.g. Item or Block)
      * @return HashSet of the resource element and the resolved tag
      */
+    @SuppressWarnings("unchecked") // should be fine
     public static <T> HashSet<T> getResourceElements(final Class<T> type, final List<String> values) {
         Registry<T> registry = (Registry<T>) REGISTRY_MAP.getOrDefault(type, null);
         HashSet<T> hashSet = new HashSet<>();
@@ -569,7 +687,11 @@ public class ConfigHandler {
         return hashSet;
     }
 
-    public static String createConfigPath(final String[] category, final String key) {
+    private static String createConfigPath(final ConfigOption configOption) {
+        return createConfigPath(configOption.category(), configOption.key());
+    }
+
+    private static String createConfigPath(final String[] category, final String key) {
         StringBuilder path = new StringBuilder();
 
         for (String pathElement : category) {
@@ -579,21 +701,5 @@ public class ConfigHandler {
         path.append(key);
 
         return path.toString();
-    }
-
-    public static String createConfigPath(final ConfigOption configOption) {
-        return createConfigPath(configOption.category(), configOption.key());
-    }
-
-    public static boolean isResource(final ConfigOption configOption) {
-        Field field = ConfigHandler.configFields.get(configOption.key());
-        Class<?> checkType = Primitives.unwrap(field.getType());
-
-        if (field.isAnnotationPresent(ConfigType.class)) {
-            ConfigType type = field.getAnnotation(ConfigType.class);
-            checkType = Primitives.unwrap(type.value());
-        }
-
-        return ItemLike.class.isAssignableFrom(checkType) || checkType == Block.class || checkType == EntityType.class || checkType == MobEffect.class || checkType == Biome.class;
     }
 }
